Fix the issue of the scrollable body on cart/menu appearance on mobile

--- a/demo/peacock/src/components/sidebar/sidebar.css
+++ b/demo/peacock/src/components/sidebar/sidebar.css
@@ -22,6 +22,7 @@
   transform: translateX(-100%);
   transition: transform .2s;
   lost-column: 4/12;
+  overflow-y: auto;
 }
 
 .sidebar-shown .overlay {
