--- a/demo/peacock/src/css/reset.css
+++ b/demo/peacock/src/css/reset.css
@@ -20,6 +20,24 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-smooth: always;
+  overflow: hidden;
+  position: fixed;
+  width:100vw;
+  height: 100vh;
+}
+#body-wrapper {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  margin-top: 50px;
+}
+.no-scroll {
+  overflow: hidden !important;
+}
+
+.no-scroll-mobile {
+  overflow: hidden !important;
+  width: auto !important;
 }
 
 fieldset {
